--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
+    "lucide-react": "^0.546.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -25,5 +29,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14"
   }
 }
