--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.546.0",
     "react": "^18.2.0",
